SET(LIB_TINYXML_SRCS
	tinyxml.cpp
	tinystr.cpp
	tinyxmlerror.cpp
	tinyxmlparser.cpp
)

SET(LIB_TINYXML_HEADERS
  tinystr.h 
  tinyxml.h
)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
)

SET(TINYXML_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR})

IF(MSVC)
	ADD_LIBRARY(tinyxml STATIC ${LIB_TINYXML_SRCS})
ELSE()
	ADD_LIBRARY(tinyxml SHARED ${LIB_TINYXML_SRCS})
ENDIF()

install(TARGETS tinyxml 
  LIBRARY DESTINATION ${Amaterasu3D_BINARY_DIR}
  ARCHIVE DESTINATION ${Amaterasu3D_BINARY_DIR}
)
