SET(Amaterasu3DLPV_SRCS
	main.cpp
	LPV.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Libs/Amaterasu3D
)

ADD_EXECUTABLE(Amaterasu3DLPV ${Amaterasu3DLPV_SRCS})

target_link_libraries(
  Amaterasu3DLPV
  Amaterasu3D
)

SET_TARGET_PROPERTIES(Amaterasu3DLPV PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS Amaterasu3DLPV RUNTIME DESTINATION ${PROJECT_BUILD_PATH})